# ANVIL

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  python-ci.yml
anvil_api/: celery_worker.py  main.py
anvil_api/routers/: crucible_router.py  forge_router.py
anvil_api/tasks/: simulation_tasks.py
anvil_crucible/data/public/: mathematics_001.json
anvil_forge/simulations/societal_track/: water_rights_dispute.py
docs/: architecture.md
frontend/: package.json
infrastructure/: main.tf
tests/: test_sanity_check.py
